@@ -1,5 +1,13 @@
 2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* BrowserWindow.h:
+	* BrowserWindow.cpp:
+	* BrowserWindow.xml:
+	* X3DBrowserWindowInterface.h:
+	* X3DBrowserWindowInterface.cpp: 
+
+2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* ScriptEditor.xml:
 	* X3DUserInterface.cpp:
 	* ScriptEditor.h:
